fixes on hibernation doctypes, import statements